build_error.log
The Meson build system
Version: 1.3.2
Source dir: /opt/mellanox/doca/applications
Build dir: /tmp/build
Build type: native build
Program cat found: YES (/usr/bin/cat)
Project name: DOCA_APPLICATIONS
Project version: 3.2.0118
C compiler for the host machine: cc (gcc 13.3.0 "cc (Ubuntu 13.3.0-6ubuntu2~24.04) 13.3.0")
C linker for the host machine: cc ld.bfd 2.42
C++ compiler for the host machine: c++ (gcc 13.3.0 "c++ (Ubuntu 13.3.0-6ubuntu2~24.04) 13.3.0")
C++ linker for the host machine: c++ ld.bfd 2.42
Host machine cpu family: aarch64
Host machine cpu: aarch64
Program nvlink found: NO
meson.build:67: WARNING: CUDA was not found (nvlink) - Disabling GPU support!
Program protoc found: YES (/usr/bin/protoc)
Program grpc_cpp_plugin found: YES (/usr/bin/grpc_cpp_plugin)
Program grpc_python_plugin found: YES (/usr/bin/grpc_python_plugin)
Found pkg-config: YES (/usr/bin/pkg-config) 1.8.1
Run-time dependency protobuf found: YES 3.21.12
Run-time dependency grpc++ found: YES 1.51.1
Program cp found: YES (/usr/bin/cp)
Program dpacc found: YES (/opt/mellanox/doca/tools/dpacc)
Run-time dependency threads found: YES
Checking for function "strlcpy" : YES 
Run-time dependency doca-common found: YES 3.2.0118
Header "doca_build_config.h" has symbol "DOCA_ARCH_DPU" with dependency doca-common: YES 
meson.build:333: WARNING: Skipping compilation of DOCA Application - app_shield_agent.
meson.build:333: WARNING: Skipping compilation of DOCA Application - bifurcated_driver_model.
meson.build:333: WARNING: Skipping compilation of DOCA Application - dma_copy.
meson.build:333: WARNING: Skipping compilation of DOCA Application - dpa_all_to_all.
meson.build:333: WARNING: Skipping compilation of DOCA Application - dpu_gpu_remote_offload.
meson.build:333: WARNING: Skipping compilation of DOCA Application - eth_l2_fwd.
meson.build:333: WARNING: Skipping compilation of DOCA Application - file_compression.
meson.build:333: WARNING: Skipping compilation of DOCA Application - file_integrity.
meson.build:333: WARNING: Skipping compilation of DOCA Application - gpu_packet_processing.
meson.build:333: WARNING: Skipping compilation of DOCA Application - ip_frag.
meson.build:333: WARNING: Skipping compilation of DOCA Application - ipsec_security_gw.
meson.build:333: WARNING: Skipping compilation of DOCA Application - nvme_emulation.
meson.build:333: WARNING: Skipping compilation of DOCA Application - pcc.
meson.build:333: WARNING: Skipping compilation of DOCA Application - psp_gateway.
meson.build:333: WARNING: Skipping compilation of DOCA Application - secure_channel.
meson.build:333: WARNING: Skipping compilation of DOCA Application - simple_fwd_vnf.
meson.build:333: WARNING: Skipping compilation of DOCA Application - storage.
meson.build:333: WARNING: Skipping compilation of DOCA Application - stream_receive_perf.
meson.build:333: WARNING: Skipping compilation of DOCA Application - switch.
Run-time dependency doca-argp found: YES 3.2.0118
Run-time dependency doca-flow found: YES 3.2.0118
Run-time dependency doca-dpdk-bridge found: YES 3.2.0118
Dependency doca-common found: YES 3.2.0118 (cached)
Run-time dependency libdpdk found: YES 22.11.2510.1.0
Run-time dependency json-c found: YES 0.17
Library doca_flow_tune_server found: YES
meson.build:333: WARNING: Skipping compilation of DOCA Application - urom_rdmo.
meson.build:333: WARNING: Skipping compilation of DOCA Application - virtiofs.
meson.build:333: WARNING: Skipping compilation of DOCA Application - yara_inspection.
Build targets in project: 1

Found ninja-1.11.1 at /usr/bin/ninja
ninja: Entering directory `/tmp/build'
[1/18] Compiling C object upf_accel/doca_upf_accel.p/pfcp_pfcp_util.c.o
[2/18] Compiling C object upf_accel/doca_upf_accel.p/upf_accel_smf_default_init.c.o
[3/18] Compiling C object upf_accel/doca_upf_accel.p/pfcp_pfcp_association.c.o
[4/18] Compiling C object upf_accel/doca_upf_accel.p/pfcp_pfcp_heartbeat.c.o
[5/18] Compiling C object upf_accel/doca_upf_accel.p/pfcp_pfcp_main.c.o
[6/18] Compiling C object upf_accel/doca_upf_accel.p/pfcp_pfcp_generic.c.o
[7/18] Compiling C object upf_accel/doca_upf_accel.p/upf_accel.c.o
FAILED: upf_accel/doca_upf_accel.p/upf_accel.c.o 
cc -Iupf_accel/doca_upf_accel.p -Iupf_accel -I../../opt/mellanox/doca/applications/upf_accel -I../../opt/mellanox/doca/applications/common -I.. -I../../opt/mellanox/doca -I../../opt/mellanox/doca/samples -I../../opt/mellanox/doca/samples/doca_flow -I../../opt/mellanox/doca/applications/upf_accel/pfcp -I/opt/mellanox/doca/include -I/usr/include/libnl3 -I/opt/mellanox/dpdk/include/dpdk -I/opt/mellanox/dpdk/include/dpdk/../aarch64-linux-gnu/dpdk -I/usr/include/aarch64-linux-gnu -I/usr/include/dbus-1.0 -I/usr/lib/aarch64-linux-gnu/dbus-1.0/include -I/usr/include/json-c -fdiagnostics-color=always -D_FILE_OFFSET_BITS=64 -Wall -Winvalid-pch -O0 -g '-D DOCA_ALLOW_EXPERIMENTAL_API' -Wno-format-zero-length '-D DOCA_USE_LIBC_STRING_L_FUNC' -include rte_config.h -mcpu=cortex-a72 -include rte_config.h -mcpu=cortex-a72 -pthread -DALLOW_EXPERIMENTAL_API -Wno-missing-braces -Wno-missing-field-initializers -MD -MQ upf_accel/doca_upf_accel.p/upf_accel.c.o -MF upf_accel/doca_upf_accel.p/upf_accel.c.o.d -o upf_accel/doca_upf_accel.p/upf_accel.c.o -c ../../opt/mellanox/doca/applications/upf_accel/upf_accel.c
../../opt/mellanox/doca/applications/upf_accel/upf_accel.c: In function ‘upf_accel_apply_pending_smf_cfg’:
../../opt/mellanox/doca/applications/upf_accel/upf_accel.c:1465:44: warning: initialization discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
 1465 |         struct upf_accel_config *cur_cfg = upf_accel_ctx->upf_accel_cfg;
      |                                            ^~~~~~~~~~~~~
../../opt/mellanox/doca/applications/upf_accel/upf_accel.c: In function ‘upf_accel_register_params’:
../../opt/mellanox/doca/applications/upf_accel/upf_accel.c:1887:33: error: redeclaration of ‘flow_tune_server_param’ with no linkage
 1887 |         struct doca_argp_param *flow_tune_server_param;
      |                                 ^~~~~~~~~~~~~~~~~~~~~~
../../opt/mellanox/doca/applications/upf_accel/upf_accel.c:1870:33: note: previous declaration of ‘flow_tune_server_param’ with type ‘struct doca_argp_param *’
 1870 |         struct doca_argp_param *flow_tune_server_param;
      |                                 ^~~~~~~~~~~~~~~~~~~~~~
[8/18] Compiling C object upf_accel/doca_upf_accel.p/pfcp_pfcp_ie.c.o
../../opt/mellanox/doca/applications/upf_accel/pfcp/pfcp_ie.c: In function ‘upf_parse_ies’:
../../opt/mellanox/doca/applications/upf_accel/pfcp/pfcp_ie.c:15:18: warning: unused variable ‘t’ [-Wunused-variable]
   15 |         uint16_t t = be16(&buf[off]);
      |                  ^
../../opt/mellanox/doca/applications/upf_accel/pfcp/pfcp_ie.c: At top level:
../../opt/mellanox/doca/applications/upf_accel/pfcp/pfcp_ie.c:278:43: warning: "/*" within comment [-Wcomment]
  278 |  * Returns 0 on success and fills *out_buf/*out_len. Caller must free *out_buf. */
      |                                            
[9/18] Compiling C object upf_accel/doca_upf_accel.p/upf_accel_json_parser.c.o
[10/18] Compiling C object upf_accel/doca_upf_accel.p/upf_accel_print_header.c.o
[11/18] Compiling C object upf_accel/doca_upf_accel.p/pfcp_pfcp_session.c.o
../../opt/mellanox/doca/applications/upf_accel/pfcp/pfcp_session.c: In function ‘handle_session_establishment_request’:
../../opt/mellanox/doca/applications/upf_accel/pfcp/pfcp_session.c:45:41: warning: format ‘%zu’ expects argument of type ‘size_t’, but argument 4 has type ‘int’ [-Wformat=]
   45 |         printf(" IE[%zu]: type=%u len=%zu\n", i, top_ies[i].type, top_ies[i].len);
      |                                       ~~^                         ~~~~~~~~~~~~~~
      |                                         |                                   |
      |                                         long unsigned int                   int
      |                                       %u
[12/18] Compiling C object upf_accel/doca_upf_accel.p/.._.._samples_common.c.o
[13/18] Compiling C object upf_accel/doca_upf_accel.p/.._common_dpdk_utils.c.o
[14/18] Compiling C object upf_accel/doca_upf_accel.p/.._common_packet_parser.c.o
[15/18] Compiling C object upf_accel/doca_upf_accel.p/upf_accel_pipeline.c.o
[16/18] Compiling C object upf_accel/doca_upf_accel.p/upf_accel_flow_processing.c.o
ninja: build stopped: subcommand failed.
